# muzik

./: Cargo.toml
migrations/: 20260130000000_init.sql
src/: main.rs
src/cli/: args.rs  handler.rs  mod.rs
src/db/: conn.rs  mod.rs  root.rs
src/domain/: mod.rs  models.rs
src/engine/: mod.rs
src/scanner/: metadata.rs  mod.rs  walker.rs
