[package]
name = "muzik"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
# rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.55", features = ["derive"] }
infer = "0.15"
lofty = "0.21"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }

